RESOLVED FIXED307580
REGRESSION(307276@main): Broke the ENABLE_CONTENT_CHANGE_OBSERVER && !NDEBUG build
https://bugs.webkit.org/show_bug.cgi?id=307580
Summary REGRESSION(307276@main): Broke the ENABLE_CONTENT_CHANGE_OBSERVER && !NDEBUG ...
Abrar Rahman Protyasha
Reported 2026-02-11 12:01:09 PST
i.e. CCO in debug
Attachments
Radar WebKit Bug Importer
Comment 1 2026-02-11 12:01:16 PST
Abrar Rahman Protyasha
Comment 2 2026-02-11 12:08:09 PST
EWS
Comment 3 2026-02-11 12:21:21 PST
Committed 307288@main (b98bc4249ad6): <https://commits.webkit.org/307288@main> Reviewed commits have been landed. Closing PR #58429 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.