REGRESSION(307276@main): Broke the ENABLE_CONTENT_CHANGE_OBSERVER && !NDEBUG build https://bugs.webkit.org/show_bug.cgi?id=307580 rdar://170164868

Unreviewed build fix.

This commit addresses the following build error:

```
Invalid operands to binary expression ('TextStream' and 'ContentChange')
```

as we try to LOG_WITH_STREAM a `ContentChange` value in
ContentChangeObserver::adjustObservedState.

* Source/WebCore/page/cocoa/ContentChangeObserver.cpp:
(WebCore::operator<<):
* Source/WebCore/page/cocoa/ContentChangeObserver.h:

Canonical link: https://commits.webkit.org/307288@main